src/parser/snapshots/rbx_rsml__parser__tests__compiler_math_pow.snap
---
source: src/parser/mod.rs
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {
                    "Val": Float64(
                        256.0,
                    ),
                },
            },
            static_attributes: {},
            child_rules: [],
        },
    ),
    nodes: [],
    is_static: false,
}
