src/parser/snapshots/rbx_rsml__parser__tests__compiler_math_precedence_mult_add.snap
---
source: src/parser/mod.rs
expression: compiled.tree_nodes
---
TreeNodeGroup {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {
                    "Val": Float32(
                        5.0,
                    ),
                },
            },
            static_attributes: {},
            child_rules: [],
        },
    ),
    nodes: [],
}
