src/parser/snapshots/rbx_rsml__parser__tests__compiler_math_udim_mixed.snap
---
source: src/parser/mod.rs
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {
                    "Size": UDim(
                        UDim {
                            scale: 0.5,
                            offset: 10,
                        },
                    ),
                },
            },
            static_attributes: {},
            child_rules: [],
        },
    ),
    nodes: [],
    is_static: false,
}
