src/parser/snapshots/rbx_rsml__parser__tests__compiler_pub_static_token.snap
---
source: src/parser/mod.rs
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {
                "Brand": Variant(
                    Color3(
                        Color3 {
                            r: 1.0,
                            g: 0.53333336,
                            b: 0.0,
                        },
                    ),
                ),
            },
            child_rules: [],
        },
    ),
    nodes: [],
    is_static: false,
}
